<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
		<parent>
			<groupId>com.camsys.assetcloud</groupId>
			<artifactId>CSAssetCloud</artifactId>
			<version>1.17-RELEASE</version>
		</parent>

		<artifactId>NeedsForecaster</artifactId>
		<name>NeedsForecaster</name>
		<description>NeedsForecaster</description>
		<version>0.0.5-SNAPSHOT</version>

		<properties>
			<java.version>17</java.version>
			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		</properties>

		<dependencyManagement>
			<dependencies>
				<dependency>
					<groupId>software.amazon.awssdk</groupId>
					<artifactId>bom</artifactId>
					<version>2.17.5</version>
					<type>pom</type>
					<scope>import</scope>
				</dependency>
			</dependencies>
		</dependencyManagement>

		<dependencies>
     		<dependency>
				<groupId>org.openjdk.nashorn</groupId>
				<artifactId>nashorn-core</artifactId>
				<version>15.3</version>
            </dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-csv</artifactId>
				<version>1.9.0</version>
			</dependency>
			<dependency>
				<groupId>net.thisptr</groupId>
				<artifactId>jackson-jq</artifactId>
				<version>1.0.0-preview.20220705</version>
			</dependency>
			<dependency>
				<groupId>de.danielbechler</groupId>
				<artifactId>java-object-diff</artifactId>
				<version>0.95</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-rest</artifactId>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-jersey</artifactId>
			</dependency>
			<dependency>
				<groupId>org.springframework.session</groupId>
				<artifactId>spring-session-core</artifactId>
			</dependency>
			<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-security</artifactId>
		    </dependency>
			<dependency>
			    <groupId>org.springframework.boot</groupId>
			    <artifactId>spring-boot-starter-mustache</artifactId>
			</dependency>
			<dependency>
				<groupId>com.github.java-json-tools</groupId>
				<artifactId>json-schema-validator</artifactId>
				<version>2.2.14</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-webflux</artifactId>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-websocket</artifactId>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-resource-server</artifactId>
				<version>5.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>com.vladmihalcea</groupId>
				<artifactId>hibernate-types-52</artifactId>
				<version>2.18.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>5.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>5.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-oauth2-jose</artifactId>
				<version>5.6.1</version>
			</dependency>
			<dependency>
			    <groupId>org.springframework.boot</groupId>
			    <artifactId>spring-boot-starter-web</artifactId>
			</dependency>
		 	<dependency>
				<groupId>net.oneandone.reflections8</groupId>
				<artifactId>reflections8</artifactId>
				<version>0.11.7</version>
			</dependency>
			 <dependency>
			    <groupId>software.amazon.awssdk</groupId>
			    <artifactId>s3</artifactId>
			</dependency>
			<dependency>
				<groupId>com.camsys.assetcloud</groupId>
				<artifactId>Core</artifactId>
				<version>1.17-RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>cognitoidentity</artifactId>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>cognitoidentityprovider</artifactId>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>sso</artifactId>
			</dependency>
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>ssooidc</artifactId>
			</dependency>
		</dependencies>

		<build>
				<resources>
					<resource>
					<directory>src/main/resources</directory>
					<filtering>true</filtering>
					</resource>
				</resources>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
					</plugin>
		 			<plugin>
						<groupId>com.github.eirslett</groupId>
						<artifactId>frontend-maven-plugin</artifactId>
						<version>1.7.5</version>
						<configuration>
							<workingDirectory>src/main/js</workingDirectory>
							<installDirectory>${project.build.directory}/.npm</installDirectory>
						</configuration>
						<executions>
							<execution>
								<id>install-node-and-npm</id>
								<goals>
									<goal>install-node-and-npm</goal>
								</goals>
								<configuration>
									<nodeVersion>v16.20.1</nodeVersion>
									<npmVersion>7.0.3</npmVersion>
								</configuration>
							</execution>
							<execution>
								<id>install</id>
								<goals>
									<goal>npm</goal>
								</goals>
								<configuration>
									<arguments>install</arguments>
								</configuration>
							</execution>
							<execution>
								<id>build</id>
								<goals>
									<goal>npm</goal>
								</goals>
								<configuration>
									<arguments>run build</arguments>
								</configuration>
								<phase>generate-resources</phase>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>17</source>
							<target>17</target>
						</configuration>
					</plugin>

					<plugin>
						<groupId>io.fabric8</groupId>
						<artifactId>docker-maven-plugin</artifactId>
						<version>0.37.0</version>
						<configuration>
								<images>
										<image>
												<registry>${docker.registry_id}.dkr.ecr.us-east-1.amazonaws.com</registry>
												<name>needs_forecaster</name>
												<build>
														<dockerFile>${project.basedir}/Dockerfile</dockerFile>
														<args>
															 <version>${project.version}</version>
														</args>
														<tags>
																<tag>${project.version}</tag>
																<tag>latest</tag>
														</tags>
												</build>
										</image>
								</images>
						</configuration>
					</plugin>
				</plugins>
			</build>

</project>
